# MusicLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  vcpkg.json  webpack.config.js  清理备忘.md
.github/workflows/: build-release.yml  build-windows-arm64.yml  build-windows-x86.yml  build.yml  linux-build-arm64.yml  linux-build-x64.yml  linux-build.yml  macos-build.yml  windows-build-release.yml
scripts/: generate_module_funs.js  js_to_header.js  kugou.webpack.config.js  ncm.webpack.config.js  pull_ncm.js
scripts/generate_module/: kugou.js  ncm.js  tool.js
src/c/: engine.c  http.c  kugou_music_api.c  kugou_music_api.def  main.c  test.c  tool.c
src/c/kugou/: extension.c  kugou_music_api.c  kugou_music_api.def  main.c
src/c/ncm/: extension.c  main.c
src/def/: engine.def  kugou_music_api.def  ncm_music_api.def
src/include/: app.bundle.h  engine.h  js_bundle.h  kugou_music_api.h  kugou_music_api_version.h.in  ncm_music_api.h  ncm_music_api_version.h.in  tool.h
src/js/: axios_bridge.js  index.js
src/js/kugou/: index.js  modulesDefinitions.js
src/js/ncm/: index.js  modulesDefinitions.js  request.js
